--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         const status = data[0]?.status?.toLowerCase();
 
         if (status === "open") {
-          document.getElementById("content").innerHTML = '<iframe src="https://cp.nexuscall.org/mbilling"></iframe>';
+          document.getElementById("content").innerHTML = '<iframe src="https://cp.nexuscall.org/mbilling/"></iframe>';
         } else {
           document.getElementById("content").innerHTML = "<h2>التطبيق مغلق حالياً</h2>";
         }
